# gpt-on-terminal

./: .gitignore  CMakeLists.txt  README.md
include/: openai.hpp
src/: application_main.cc  gtot_api.cc  gtot_api.hpp
